# seed11

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: choice.cpp  make_seeded.cpp  seed_device.cpp  ts2_random_backports.cpp
include/seed11/: deterministic_unsafe_seed_device.hpp  seed11.hpp  seed_device.hpp
src/: deterministic_unsafe_seed_device.cpp  seed11_linux.cpp  seed11_system_agnostic.cpp  seed11_unix.cpp  seed11_windows.cpp
tests/: dieharder.sh  motivation.cpp  multiple_runs_over_second.sh  random_output.cpp  seed_size.cpp
